TAG: lib_java_fe-tr11654-BP
DATE: 05/14/14
STAFF: pf
CHANGES: branch point for TR11654 development

TAG: lib_java_fe-5-1-8-1
DATE: 4/23/14
STAFF: pf
CHANGES: release tags for 5.18

TAG: lib_java_fe-tr11560-BP
DATE: 03/18/2014
STAFF: jsb
CHANGES: 
1) branch point for TR11560 (Feature Relationships project), team scrum-bob

TAG: lib_java_fe-5-1-7-1
DATE: 02/05/2014
STAFF: jsb
CHANGES: 
1) merged tr11468 (GXD Anatomy) changes into trunk

TAG: lib_java_fe-5-1-6-1,lib_java_fe-5-1-6-2
DATE: 11/20/2013
STAFF: kstone
CHANGES: 
1) TR11423 (Disease Portal)
2) fix for coordinate sorting

TAG: lib_java_fe-tr11468-BP
DATE: 10/07/2013
STAFF: jsb
CHANGES: branch point for GXD Anatomy project (TR11468, team scrum-bob)

TAG: lib_java_fe-5-1-5-1
DATE: 08/20/2013
STAFF: jsb
CHANGES: merging in tr11353 branch

TAG: lib_java_fe-5-1-4-1
DATE: 5/28/13
STAFF: pf
CHANGES: merging in tr11248 branch

TAG: lib_java_fe-tr11353-BP
DATE: 05/21/2013
STAFF: jsb
CHANGES: branch point for Infrastructure I (TR11353, team scrum-bob) project

TAG: ?
DATE: 2013/05/09
STAFF: kstone
CHANGES: merge TR11248 (GXD/SNP/Cre) to trunk

TAG: lib_java_fe-5-1-3-1
TAG: lib_java_fe-5-1-2-1
DATE: 04/16/2013
STAFF: sc
CHANGES: N2MO - merge tr6519 branch to the trunk

TAG: lib_java_fe-tr11248-BP
DATE: 11/27/12
STAFF: lec
CHANGES: branch point for TR11248 (GXD/SNP/Cre)

TAG: lib_java_fe-tr6519-BP
DATE: 11/27/12
STAFF: marka
CHANGES: branch point for N-M Orthalogy project

TAG: lib_java_fe-tr10273-BP
DATE: 8/24/12
STAFF: pf
CHANGES: branch point for HT-MP project

TAG: lib_java_fe-5-1-0-1
DATE: 8/7/12
STAFF: pf
CHANGES: 5.1 alpha tags

TAG: lib_java_fe-5-0-0-9
DATE: 05/10/2012
STAFF: jsb
CHANGES: added VOC_BY_DAG_TERM

TAG: lib_java_fe-5-0-0-8
DATE: 02/16/2012
STAFF: jsb
CHANGES: added fields for new symbol/synonym field for gxd lit index

TAG: lib_java_fe-tr10269-BP
DATE: 1/27/2012
STAFF: jmason
CHANGES:
1) Branch point tag for TR10269

TAG: lib_java_fe-5-0-0-x 1->6
DATE: 12/19/2011 -> 1/9/2012
STAFF: jsb/pf